# termite

./: Cargo.toml  README.md  config.example  logo
crates/c_term_app/: Cargo.toml
crates/c_term_app/src/: config.rs  lib.rs  main.rs  plugins.rs  runner.rs  theme.rs  window_backend.rs
crates/c_term_app/src/plugins/: cursor_line.rs  cursor_trail.rs  screen_opacity.rs  screen_tint.rs
crates/c_term_app/src/window_backend/: gpu.rs  input.rs  pty_events.rs  render_cache.rs  selection.rs  text.rs
crates/c_term_core/: Cargo.toml
crates/c_term_core/src/: damage.rs  event.rs  grid.rs  lib.rs  parser.rs  terminal.rs
crates/c_term_plugins_api/: Cargo.toml
crates/c_term_plugins_host/: Cargo.toml
crates/c_term_plugins_sdk/: Cargo.toml
crates/c_term_renderer/: Cargo.toml
crates/termite/: Cargo.toml
crates/termite/src/: config.rs  main.rs  plugins.rs  runner.rs  theme.rs  window_backend.rs
crates/termite/src/plugins/: cursor_line.rs  cursor_trail.rs  screen_opacity.rs
crates/termite/src/window_backend/: frame.rs  gpu.rs  input.rs  interaction.rs  perf.rs  pty_events.rs  render_cache.rs  selection.rs  terminal_io.rs  text.rs  zoom.rs
crates/termite/src/window_backend/text/: bitmap.rs  font.rs  geometry.rs  glyph.rs  paint.rs  shape.rs
crates/termite_core/: Cargo.toml
docs/: ARCHITECTURE.md  CONFIG_AND_PLUGINS.md  PERFORMANCE.md  TERMINAL_IDENTITY.md
scripts/: bench_live_terminals.sh  bench_terminals.sh  compare_kitty.sh  perf_smoke.sh  profile_pprof.sh  profile_samply.sh  profile_termite.sh  text_smoke.sh
terminfo/: termite.terminfo
(+14 files in other folders)
